- refactored. - added module-info.java - added tests for all days