@@ -3,20 +3,25 @@ package hzt.aoc.day04.model;
 import org.apache.log4j.LogManager;
 import org.apache.log4j.Logger;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 public class Passport {
 
     private static final Logger LOGGER = LogManager.getLogger(Passport.class);
+
+    private static final Pattern HAIR_COLOR_PATTERN = Pattern.compile("(#)([\\da-fA-F]{6})");
+    private static final Pattern PASSWORD_ID_PATTERN = Pattern.compile("(\\d{9})");
+    private static final Pattern NR_PATTERN = Pattern.compile("\\d+");
+    private static final Pattern FOUR_DIGIT_NR_PATTERN = Pattern.compile("\\d{4}");
+
     private static final int LOWEST_BIRTH_YEAR = 1920;
     private static final int HIGHEST_BIRTH_YEAR = 2002;
     private static final int LOWEST_ISSUE_YEAR = 2010;
     private static final int HIGHEST_ISSUE_YEAR = 2020;
     private static final int LOWEST_EXPIRATION_YEAR = 2020;
     private static final int HIGHEST_EXPIRATION_YEAR = 2030;
-    private static final Set<String> VALID_EYE_COLORS = new HashSet<>(Arrays.asList("amb", "amb", "blu", "brn", "gry", "grn", "hzl", "oth"));
+    private static final Set<String> VALID_EYE_COLORS = Set.of("amb", "blu", "brn", "gry", "grn", "hzl", "oth");
     private static final int UNIT_LENGTH = 2;
     private static final int MINIMUM_HEIGHT_STRING_LENGTH = 3;
 
@@ -33,7 +38,13 @@ public class Passport {
         super();
     }
 
-    public Passport(String passwordID, String expirationYear, String issueYear, String birthYear, String height, String eyeColor, String hairColor) {
+    public Passport(final String passwordID,
+                    final String expirationYear,
+                    final String issueYear,
+                    final String birthYear,
+                    final String height,
+                    final String eyeColor,
+                    final String hairColor) {
         this.passwordID = passwordID;
         this.expirationYear = expirationYear;
         this.issueYear = issueYear;
@@ -45,29 +56,39 @@ public class Passport {
 
     // in part 1, a password is valid when all fields have a value. Only country ID is optional
     public boolean requiredFieldsPresent() {
-        boolean mandatoryPassportFieldsPresent = passwordID != null && expirationYear != null && issueYear != null;
-        boolean userFieldsPresent = birthYear != null && height != null && eyeColor != null && hairColor != null;
+        final boolean mandatoryPassportFieldsPresent = passwordID != null && expirationYear != null && issueYear != null;
+        final boolean userFieldsPresent = birthYear != null && height != null && eyeColor != null && hairColor != null;
         return mandatoryPassportFieldsPresent && userFieldsPresent;
     }
 
     public boolean fieldsMeetCriteria() {
         if (requiredFieldsPresent()) {
-            boolean birthYearValid = checkYear(birthYear, LOWEST_BIRTH_YEAR, HIGHEST_BIRTH_YEAR);
-            boolean issueYearValid = checkYear(issueYear, LOWEST_ISSUE_YEAR, HIGHEST_ISSUE_YEAR);
-            boolean expirationYearValid = checkYear(expirationYear, LOWEST_EXPIRATION_YEAR, HIGHEST_EXPIRATION_YEAR);
-            boolean heightValid = checkHeight(height);
-            boolean hairColorValid = hairColor != null && hairColor.matches("(#)([0-9a-fA-F]{6})"); // a # followed by exactly six characters 0-9 or a-f.
-            boolean eyeColorValid = eyeColor != null && VALID_EYE_COLORS.contains(eyeColor);
-            boolean passportIdValid = passwordID.matches("([0-9]{9})"); // a nine-digit number, including leading zeroes.
+            final boolean birthYearValid = checkYear(birthYear, LOWEST_BIRTH_YEAR, HIGHEST_BIRTH_YEAR);
+            final boolean issueYearValid = checkYear(issueYear, LOWEST_ISSUE_YEAR, HIGHEST_ISSUE_YEAR);
+            final boolean expirationYearValid = checkYear(expirationYear, LOWEST_EXPIRATION_YEAR, HIGHEST_EXPIRATION_YEAR);
+            final boolean heightValid = checkHeight(height);
+            // a # followed by exactly six characters 0-9 or a-f.
+            final boolean hairColorValid = hairColor != null && HAIR_COLOR_PATTERN.matcher(hairColor).matches();
+            final boolean eyeColorValid = eyeColor != null && VALID_EYE_COLORS.contains(eyeColor);
+            // a nine-digit number, including leading zeroes.
+            final boolean passportIdValid = PASSWORD_ID_PATTERN.matcher(passwordID).matches();
             LOGGER.trace(isValidAsString(birthYearValid, issueYearValid, expirationYearValid, heightValid,
                     hairColorValid, eyeColorValid, passportIdValid));
-            return passportIdValid && eyeColorValid && hairColorValid
-                    && heightValid && expirationYearValid && issueYearValid && birthYearValid;
-        } else return false;
+            final var personCharacteristicsValid = eyeColorValid && hairColorValid && heightValid;
+            final var passWordValid = passportIdValid && expirationYearValid && issueYearValid && birthYearValid;
+            return personCharacteristicsValid && passWordValid;
+        } else {
+            return false;
+        }
     }
 
-    private String isValidAsString(boolean birthYearValid, boolean issueYearValid, boolean expirationYearValid,
-                                   boolean heightValid, boolean hairColorValid, boolean eyeColorValid, boolean passportIdValid) {
+    private static String isValidAsString(final boolean birthYearValid,
+                                   final boolean issueYearValid,
+                                   final boolean expirationYearValid,
+                                   final boolean heightValid,
+                                   final boolean hairColorValid,
+                                   final boolean eyeColorValid,
+                                   final boolean passportIdValid) {
         return "birthYearValid=" + birthYearValid +
                 "\nissueYearValid=" + issueYearValid +
                 "\nexpirationYearValid=" + expirationYearValid +
@@ -77,60 +98,72 @@ public class Passport {
                 "\npassportIdValid=" + passportIdValid + "\n";
     }
 
-    private boolean checkHeight(String height) {
+    private static boolean checkHeight(final String height) {
         if (height.length() >= MINIMUM_HEIGHT_STRING_LENGTH) {
-            String value = height.substring(0, height.length() - UNIT_LENGTH);
-            String unit = height.substring(height.length() - UNIT_LENGTH);
-            boolean valueIsNumber = value.matches("[0-9]+");
+            final String value = height.substring(0, height.length() - UNIT_LENGTH);
+            final String unit = height.substring(height.length() - UNIT_LENGTH);
+            final boolean valueIsNumber = NR_PATTERN.matcher(value).matches();
             LOGGER.trace("value is number=" + valueIsNumber + " Value=" + value);
             if (valueIsNumber) {
-                int heightValue = Integer.parseInt(value);
-                if (unit.equals("cm")) {
-                    return heightValue >= 150 && heightValue <= 193;
-                } else if (unit.equals("in")) {
-                    return heightValue >= 59 && heightValue <= 76;
-                } else return false;
-            } else return false;
-        } else return false;
+                return checkHeightUnit(value, unit);
+            } else {
+                return false;
+            }
+        } else {
+            return false;
+        }
     }
 
-    private boolean checkYear(String input, int lower, int upper) {
-        boolean mathesFourDigits = input.length() == 4 && input.matches("\\d{4}");
-        if (mathesFourDigits) {
-            int year = Integer.parseInt(input);
+    private static boolean checkHeightUnit(String value, String unit) {
+        final int heightValue = Integer.parseInt(value);
+        if ("cm".equals(unit)) {
+            return heightValue >= 150 && heightValue <= 193;
+        } else if ("in".equals(unit)) {
+            return heightValue >= 59 && heightValue <= 76;
+        } else {
+            return false;
+        }
+    }
+
+    private static boolean checkYear(final String input, final int lower, final int upper) {
+        final boolean matchesFourDigits = input.length() == 4 && FOUR_DIGIT_NR_PATTERN.matcher(input).matches();
+        if (matchesFourDigits) {
+            final int year = Integer.parseInt(input);
             return year >= lower && year <= upper;
-        } else return false;
+        } else {
+            return false;
+        }
     }
 
-    public void setPasswordID(String passwordID) {
+    public void setPasswordID(final String passwordID) {
         this.passwordID = passwordID;
     }
 
-    public void setExpirationYear(String expirationYear) {
+    public void setExpirationYear(final String expirationYear) {
         this.expirationYear = expirationYear;
     }
 
-    public void setIssueYear(String issueYear) {
+    public void setIssueYear(final String issueYear) {
         this.issueYear = issueYear;
     }
 
-    public void setCountryId(String countryId) {
+    public void setCountryId(final String countryId) {
         this.countryId = countryId;
     }
 
-    public void setBirthYear(String birthYear) {
+    public void setBirthYear(final String birthYear) {
         this.birthYear = birthYear;
     }
 
-    public void setHeight(String height) {
+    public void setHeight(final String height) {
         this.height = height;
     }
 
-    public void setEyeColor(String eyeColor) {
+    public void setEyeColor(final String eyeColor) {
         this.eyeColor = eyeColor;
     }
 
-    public void setHairColor(String hairColor) {
+    public void setHairColor(final String hairColor) {
         this.hairColor = hairColor;
     }
 
